// protoc -I=./proto --python_out=./proto ./proto/tunnel.proto
syntax = "proto2";

message Tunnel
{
  enum Action
  {
    start = 0;
    end = 1;
    data = 2;
    ack = 3;
  }

  enum Direction
  {
    to_proxy = 0;
    to_forwarder = 1;
  }

  optional uint32 client_id = 1;
  optional uint32 sequence_number = 2;
  optional Action action = 3;
  optional Direction direction = 4;
  optional string ip = 5;
  optional uint32 port = 6;
  optional bytes payload = 7;
}